# ipp.rs

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  rust.yml
ci/: build.bash  test.bash
doc/: aliases.js  crates.js  help.html  search-index.js  settings.html  source-files.js  src-files.js
doc/implementors/ipp/: trait.ReadIppExt.js
doc/implementors/structopt/: trait.StructOpt.js  trait.StructOptInternal.js
doc/ipp/: IPP_VERSION.v.html  IppError.t.html  IppHeader.t.html  ReadIppExt.t.html  all.html  constant.IPP_VERSION.html  enum.IppError.html  index.html  sidebar-items.js  struct.IppHeader.html  trait.ReadIppExt.html  type.Result.html
doc/ipp/attribute/: IppAttribute.t.html  IppAttributeList.t.html  index.html  sidebar-items.js  struct.IppAttribute.html  struct.IppAttributeGroup.html  struct.IppAttributeList.html  struct.IppAttributes.html
doc/ipp/builder/: index.html  sidebar-items.js  struct.CreateJobBuilder.html  struct.CupsBuilder.html  struct.GetPrinterAttributesBuilder.html  struct.IppOperationBuilder.html  struct.PrintJobBuilder.html  struct.SendDocumentBuilder.html
doc/ipp/client/: IppClient.t.html  enum.IppError.html  index.html  sidebar-items.js  struct.IppClient.html  struct.IppClientBuilder.html
doc/ipp/consts/: index.html  sidebar-items.js
doc/ipp/error/: enum.IppError.html  index.html  sidebar-items.js
doc/ipp/ffi/: fn.ipp_main.html  index.html  ipp_main.v.html  sidebar-items.js
doc/ipp/model/: enum.DelimiterTag.html  enum.Finishings.html  enum.JobState.html  enum.Operation.html  enum.Orientation.html  enum.PrintQuality.html  enum.PrinterState.html  enum.StatusCode.html  enum.ValueTag.html  index.html  sidebar-items.js  struct.IppVersion.html
doc/ipp/operation/: CreateJob.t.html  GetPrinterAttributes.t.html  IppOperation.t.html  PrintJob.t.html  SendDocument.t.html  index.html  sidebar-items.js  struct.CancelJob.html  struct.CreateJob.html  struct.GetJobAttributes.html  struct.GetJobs.html  struct.GetPrinterAttributes.html  struct.PrintJob.html  struct.PurgeJobs.html  struct.SendDocument.html  trait.IppOperation.html
doc/ipp/parser/: IppParseResult.t.html  IppParser.t.html  enum.IppParseError.html  index.html  sidebar-items.js  struct.AsyncIppParser.html  struct.IppHeader.html  struct.IppParseResult.html  struct.IppParser.html
doc/ipp/payload/: index.html  sidebar-items.js  struct.IppPayload.html
doc/ipp/prelude/: index.html  sidebar-items.js  struct.Uri.html  trait._.html
doc/ipp/proto/: index.html  sidebar-items.js  struct.IppHeader.html  struct.IppPayload.html  trait.FromPrimitive.html
doc/ipp/reader/: index.html  sidebar-items.js  struct.AsyncIppReader.html  struct.IppReader.html
doc/ipp/request/: IppReadAdapter.t.html  IppRequest.t.html  IppRequestResponse.t.html  IppRequestTrait.t.html  index.html  sidebar-items.js  struct.IppReadAdapter.html  struct.IppRequest.html  struct.IppRequestResponse.html  trait.IppRequestTrait.html
doc/ipp/response/: IppResponse.t.html  index.html  sidebar-items.js  struct.IppResponse.html
doc/ipp/server/: IppServer.t.html  IppServerResult.t.html  index.html  sidebar-items.js  trait.IppServer.html  type.IppServerResult.html
doc/ipp/util/: fn.canonicalize_uri.html  fn.check_printer_state.html  fn.is_printer_ready.html  (+6 more)
doc/ipp_client/: all.html  enum.IppError.html  index.html  sidebar-items.js  struct.IppClientBuilder.html
doc/ipp_proto/: all.html  index.html  sidebar-items.js  struct.IppHeader.html  struct.IppJobSource.html
doc/ipp_server/: all.html  index.html  sidebar-items.js
doc/ipp_util/: all.html  index.html  sidebar-items.js
doc/ipputil/: all.html  enum.IppCommand.html  fn.do_cancel_job.html  fn.do_get_all_jobs.html  fn.do_get_job.html  fn.do_print.html  fn.do_print_job.html  fn.do_purge_jobs.html  fn.do_status.html  fn.dump_attributes.html  fn.get_payload.html  fn.main.html  fn.new_client.html  fn.new_payload.html  index.html  sidebar-items.js  struct.IppCancelCmd.html  struct.IppGetAllJobsCmd.html  struct.IppGetJobCmd.html  struct.IppParams.html  struct.IppPrintCmd.html  struct.IppPurgeCmd.html  struct.IppStatusCmd.html
examples/: Cargo.toml  create-job.rs  get-attrs.rs  get-printer-attributes.rs  ipp-server.rs  ippserver.rs  multi-doc.rs  print-job.rs
examples/src/: delete-printer.rs  get-attrs.rs  get-printers.rs  multi-doc.rs  print-job-async.rs  print-job.rs
ipp/: CHANGELOG.md  Cargo.toml  README.md  build.rs
ipp-client/: Cargo.toml  README.md
ipp-client/examples/: delete-printer.rs  get-attrs.rs  get-printers.rs  multi-doc.rs  print-job.rs
ipp-client/src/: client.rs  lib.rs  util.rs
ipp-dylib/: Cargo.toml
ipp-dylib/src/: lib.rs
ipp-parse/: Cargo.toml
ipp-parse/src/: attribute.rs  ipp.rs  lib.rs  parser.rs  value.rs
ipp-parse/src/rfc2911/: mod.rs  operation.rs  statuscode.rs  tag.rs
ipp-proto/: Cargo.toml  README.md
ipp-proto/src/: attribute.rs  builder.rs  ipp.rs  lib.rs  operation.rs  parser.rs  request.rs  value.rs
ipp-proto/src/operation/: cups.rs  mod.rs
ipp-server/: Cargo.toml  README.md
ipp-server/examples/: ipp-server.rs
ipp-server/src/: handler.rs  lib.rs  server.rs
ipp-util/: Cargo.toml  README.md
ipp-util/src/: lib.rs  main.rs  util.rs
ipp/examples/: delete-printer.rs  get-attrs.rs  get-printers.rs  multi-doc.rs  print-job.rs
ipp/src/: attribute.rs  client.rs  error.rs  lib.rs  model.rs  operation.rs  parser.rs  payload.rs  proto.rs  reader.rs  request.rs  util.rs  value.rs
ipp/src/client/: client_isahc.rs  client_reqwest.rs  isahc_client.rs  reqwest_client.rs
ipp/src/operation/: builder.rs  cups.rs
ipp/src/proto/: attribute.rs  builder.rs  ipp.rs  mod.rs  model.rs  operation.rs  parser.rs  reader.rs  request.rs  value.rs
ipp/src/proto/operation/: cups.rs  mod.rs
ipputil/: Cargo.toml  README.md
ipputil/src/: main.rs
src/: attribute.rs  client.rs  ffi.rs  lib.rs  operation.rs  parser.rs  request.rs  response.rs  server.rs  util.rs  value.rs
src/consts/: attribute.rs  operation.rs  statuscode.rs  tag.rs
util/: Cargo.toml  README.md
util/src/: main.rs
(+635 files in other folders)
