[workspace]
members = [ "ipp", "util", "examples" ]
resolver = "2"

[workspace.package]
version = "5.5.0"
authors = ["Dmitry Pankratov <dmitry@pankratov.net>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/ancwrd1/ipp.rs"
documentation = "https://docs.rs/ipp"
readme = "README.md"
keywords = ["ipp", "print", "cups", "printing", "protocol"]
edition = "2024"
