[package]
name = "ipp-examples"
version = "4.0.0"
authors = ["Dmitry Pankratov <dmitry@pankratov.net>"]
edition = "2021"
publish = false

[[bin]]
path = "src/delete-printer.rs"
name = "delete-printer"

[[bin]]
path = "src/get-attrs.rs"
name = "get-attrs"

[[bin]]
path = "src/get-printers.rs"
name = "get-printers"

[[bin]]
path = "src/multi-doc.rs"
name = "multi-doc"

[[bin]]
path = "src/print-job-async.rs"
name = "print-job-async"

[[bin]]
path = "src/print-job.rs"
name = "print-job"

[dependencies]
ipp = { path = "../ipp", version = "4.0.0" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
