[package]
name = "ipp-examples"
description = "IPP usage examples"
publish = false
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
edition.workspace = true

[[bin]]
path = "src/delete-printer.rs"
name = "delete-printer"

[[bin]]
path = "src/get-attrs.rs"
name = "get-attrs"

[[bin]]
path = "src/get-printers.rs"
name = "get-printers"

[[bin]]
path = "src/multi-doc.rs"
name = "multi-doc"

[[bin]]
path = "src/print-job-async.rs"
name = "print-job-async"

[[bin]]
path = "src/print-job.rs"
name = "print-job"

[dependencies]
ipp = { path = "../ipp", version = "5.2.0", features = ["client-tls"] }
tokio = { version = "1", features = ["macros", "fs", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["compat"] }
