[package]
name = "ipp-client"
version = "0.4.0"
authors = ["Dmitry Pankratov <dmitry@pankratov.net>"]
description = "Asynchronous IPP client"
license = "MIT"
repository = "https://github.com/dremon/ipp.rs"
documentation = "https://docs.rs/ipp"
readme = "README.md"
keywords = ["ipp", "print", "cups", "printing", "protocol"]
edition = "2018"

[dependencies]
ipp-proto = { version = "0.4.0", path = "../ipp-proto" }
num-traits = "0.2"
reqwest = { version = "0.10.0-alpha.1", features = ["unstable-stream"] }
tokio = "0.2.0-alpha.6"
log = "0.4"
futures-preview = "0.3.0-alpha.19"
percent-encoding = "2.0"
bytes = "0.4"
