[package]
name = "ipp-client"
version = "0.4.0"
authors = ["Dmitry Pankratov <dmitry@pankratov.net>"]
description = "Asynchronous IPP client"
license = "MIT"
repository = "https://github.com/dremon/ipp.rs"
documentation = "https://docs.rs/ipp"
readme = "README.md"
keywords = ["ipp", "print", "cups", "printing", "protocol"]
edition = "2018"

[dependencies]
ipp-proto = { version = "0.4.0", path = "../ipp-proto" }
log = "0.4"
futures = "0.3"

[dependencies.isahc]
version = "0.8"
default-features = false
features = ["static-curl", "http2"]
