[package]
name = "ipputil"
version = "0.3.0"
authors = ["Dmitry Pankratov <dmitry@pankratov.net>"]
description = "C dynamic library with IPP high level utility entry"
license = "MIT"
repository = "https://github.com/dremon/ipp.rs"
documentation = "https://docs.rs/ipp"
readme = "README.md"
keywords = ["ipp", "printing", "protocol"]

[lib]
crate_type = ["cdylib"]

[dependencies]
ippclient = { path = "../ipp-client" }
