[package]
name = "ipp-proto"
version = "0.3.0"
authors = ["Dmitry Pankratov <dmitry@pankratov.net>"]
description = "IPP protocol implementation"
license = "MIT"
repository = "https://github.com/dremon/ipp.rs"
documentation = "https://docs.rs/ipp"
readme = "README.md"
keywords = ["ipp", "print", "cups", "printing", "protocol"]
edition = "2018"

[dependencies]
log = "0.4"
byteorder = "1"
enum-primitive-derive = "0.1"
num-traits = "0.2"
bytes = "0.4"
futures-preview = "=0.3.0-alpha.19"
tempfile = "3"
enum-as-inner = "0.3"

[dev-dependencies]
tokio = "0.2.0-alpha.6"
