[package]
name = "ipp-proto"
version = "0.4.0"
authors = ["Dmitry Pankratov <dmitry@pankratov.net>"]
description = "IPP protocol implementation"
license = "MIT"
repository = "https://github.com/dremon/ipp.rs"
documentation = "https://docs.rs/ipp"
readme = "README.md"
keywords = ["ipp", "print", "cups", "printing", "protocol"]
edition = "2018"

[dependencies]
log = "0.4"
byteorder = "1"
enum-primitive-derive = "0.1"
num-traits = "0.2"
futures = "0.3"
tempfile = "3"
enum-as-inner = "0.3"

[dev-dependencies]
async-std = "1"
