[package]
name = "ipp-server"
version = "0.3.0"
authors = ["Dmitry Pankratov <dmitry@pankratov.net>"]
description = "Helpers to make IPP servers"
license = "MIT"
repository = "https://github.com/dremon/ipp.rs"
documentation = "https://docs.rs/ipp"
readme = "README.md"
keywords = ["ipp", "print", "cups", "printing", "protocol"]
edition = "2018"

[dependencies]
num-traits = "0.2"
ipp-proto = { version = "0.3.0", path = "../ipp-proto" }
hyper = "0.12"
futures = "0.1"
log = "0.4"
tokio = "0.1"

[dev-dependencies]
ipp-server = { path = "../ipp-server" }
lazy_static = "1"
hyper = "0.12"
futures = "0.1"
tempfile = "3.1"
env_logger = "0.6"
log = "0.4"
