[package]
name = "ipp-server"
version = "0.3.0"
authors = ["Dmitry Pankratov <dmitry@pankratov.net>"]
description = "Helpers to make IPP servers"
license = "MIT"
repository = "https://github.com/dremon/ipp.rs"
documentation = "https://docs.rs/ipp"
readme = "README.md"
keywords = ["ipp", "print", "cups", "printing", "protocol"]
edition = "2018"

[dependencies]
ipp-proto = { version = "0.3.0", path = "../ipp-proto" }
num-traits = "0.2"
hyper = { version = "0.13.0-alpha.4", features = ["unstable-stream"] }
futures-preview = "0.3.0-alpha.19"
log = "0.4"
tokio = "0.2.0-alpha.6"

[dev-dependencies]
lazy_static = "1"
hyper = "0.13.0-alpha.4"
futures-preview = "0.3.0-alpha.19"
tempfile = "3.1"
env_logger = "0.7"
log = "0.4"
