[package]
name = "ipp-util"
version = "2.0.0"
authors = ["Dmitry Pankratov <dmitry@pankratov.net>"]
description = "IPP command line print utility"
license = "MIT"
repository = "https://github.com/ancwrd1/ipp.rs"
documentation = "https://docs.rs/ipp"
readme = "README.md"
keywords = ["ipp", "print", "cups", "printing", "protocol"]
edition = "2018"

[[bin]]
name = "ipputil"
path = "src/main.rs"

[features]
default = ["client-isahc"]
client-isahc = ["ipp/client-isahc"]
client-reqwest = ["ipp/client-reqwest", "tokio"]

[dependencies]
env_logger = "0.8"
clap = "3.0.0-beta.2"
futures = "0.3"
tokio = { version = "1", features = ["macros"], optional = true }

[dependencies.ipp]
version = "2.0.0"
path = "../ipp"
default-features = false
