[package]
name = "ipp"
description = "Asynchronous IPP print protocol implementation"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
edition.workspace = true

[package.metadata.docs.rs]
all-features = true

[lib]
name = "ipp"

[dependencies]
enum-as-inner = "0.7"
enum-primitive-derive = "0.3"
futures-executor = { version = "0.3", optional = true }
log = "0.4"
num-traits = "0.2"
bytes = "1"
thiserror = "2"
http = "1"
serde = { version = "1", optional = true, features = ["derive"] }
ureq = { version = "3", default-features = false, optional = true }
base64 = { version = "0.22", optional = true }
rustls-native-certs = { version = "0.8", optional = true }

[dependencies.futures-util]
version = "0.3"
optional = true
default-features = false
features = ["io"]

[dependencies.reqwest]
version = "0.13"
optional = true
default-features = false
features = ["stream"]

[dependencies.tokio-util]
version = "0.7"
optional = true
features = ["io", "compat"]

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[features]
default = ["async-client-rustls"]
serde = ["dep:serde", "bytes/serde"]
async = ["futures-util", "futures-executor"]
async-client = ["async", "reqwest", "tokio-util", "base64"]
client = ["ureq", "base64"]
async-client-rustls = ["async-client", "reqwest/rustls", "__tls"]
client-rustls = ["client", "rustls-native-certs", "ureq/rustls", "__tls"]
async-client-tls = ["async-client", "reqwest/native-tls", "__tls"]
client-tls = ["client", "rustls-native-certs", "ureq/native-tls", "__tls"]
__tls = []
