[package]
name = "ipp-util"
version = "5.0.0"
authors = ["Dmitry Pankratov <dmitry@pankratov.net>"]
description = "IPP command line print utility"
license = "MIT/Apache-2.0"
repository = "https://github.com/ancwrd1/ipp.rs"
documentation = "https://docs.rs/ipp"
readme = "README.md"
keywords = ["ipp", "print", "cups", "printing", "protocol"]
edition = "2021"

[[bin]]
name = "ipputil"
path = "src/main.rs"

[dependencies]
ipp = { path = "../ipp", version = "5.0.0", default-features = false, features = ["client-tls"] }
clap = { version = "4", features = ["derive"] }
