[package]
name = "ipp-util"
description = "IPP command line print utility"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
readme = "README.md"
keywords.workspace = true
edition.workspace = true

[[bin]]
name = "ipputil"
path = "src/main.rs"

[dependencies]
ipp = { path = "../ipp", version = "5.3.1", default-features = false, optional = true }
clap = { version = "4", features = ["derive"] }

[features]
default = ["client-tls"]
client-tls = ["ipp/client-tls"]
client-rustls = ["ipp/client-rustls"]

